--- a/flow/static/workshops/css/main.css
+++ b/flow/static/workshops/css/main.css
@@ -32,6 +32,7 @@ body::after {
   padding-inline: 0.5rem;
   margin-inline: auto;
   user-select: none;
+  margin-top: 5rem;
 }
 
 .container {
@@ -188,7 +189,7 @@ body::after {
   top: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.2);
-  z-index: 9;
+  z-index: 99;
   backdrop-filter: blur(1px);
   display: grid;
   place-items: center;
@@ -392,3 +393,4 @@ body::after {
     font-size: 14px;
   }
 
+}
