--- a/flow/templates/flow/attractions.html
+++ b/flow/templates/flow/attractions.html
@@ -10,7 +10,7 @@
       href="{% static 'img/final-logo.png' %}"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="{% static 'attractions/css/main.css' %}" />
+    <link rel="stylesheet" href="{% static 'attractions/css/_main.css' %}" />
     <style>
       @font-face {
         font-family: 'Transformers';
@@ -20,6 +20,10 @@
 
       body {
         background-image: url("{% static 'attractions/media_attractions/bg.png' %}");
+      }
+      .navMenu a {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: bolder !important;
       }
     </style>
   </head>
