--- a/flow/templates/flow/eventsAndInitiatives/socialInitiatives.html
+++ b/flow/templates/flow/eventsAndInitiatives/socialInitiatives.html
@@ -9,6 +9,7 @@
 		<title>Corporate Social Initiative</title>
 		<link rel="stylesheet" href="{% static 'firefly.css' %}" />
     <link rel="stylesheet" href="{% static 'eventsAndInitiatives/socialInitiatives.css' %}">
+	<link rel="shortcut icon" type="image/jpg" href="{% static 'img/aarohan_logo1-01.png' %}">
 	</head>
 	<body
 		style="
