--- a/flow/templates/flow/sponsor.html
+++ b/flow/templates/flow/sponsor.html
@@ -44,7 +44,7 @@
 
 
 		.heading {
-	
+
 			top: 0;
 			margin-top: 5px;
 			color: #fff;
@@ -108,7 +108,7 @@
 			position: relative;
 			width: 320px;
 			height: 450px;
-			background: #232323;
+			background: #ffffff61;
 			border-radius: 20px;
 			overflow: hidden;
 			opacity: 0.8;
@@ -317,7 +317,7 @@
 				position: relative;
 				width: 280px;
 				height: 400px;
-				background: #232323;
+				background: #ffffff61;
 				border-radius: 20px;
 				overflow: hidden;
 				opacity: 0.8;
@@ -370,7 +370,7 @@
 				position: relative;
 				width: 280px;
 				height: 400px;
-				background: #232323;
+				background: #ffffff61;
 				border-radius: 20px;
 				overflow: hidden;
 				opacity: 0.8;
@@ -420,7 +420,7 @@
 				position: relative;
 				width: 280px;
 				height: 400px;
-				background: #232323;
+				background: #ffffff61;
 				border-radius: 20px;
 				overflow: hidden;
 				opacity: 0.8;
@@ -473,7 +473,7 @@
 				position: relative;
 				width: 280px;
 				height: 400px;
-				background: #232323;
+				background: #ffffff61;
 				border-radius: 20px;
 				overflow: hidden;
 				opacity: 0.8;
@@ -528,7 +528,7 @@
 				position: relative;
 				width: 280px;
 				height: 400px;
-				background: #232323;
+				background: #ffffff61;
 				border-radius: 20px;
 				overflow: hidden;
 				opacity: 0.8;
@@ -829,66 +829,219 @@ box-shadow: 0 0 10px rgb(248, 0, 194); */
 
 				<div class="card">
 					<div class="imgBx">
-						<img src="{% static 'SponsorsPic/llb.png' %}">
+						<img src="{% static 'SponsorsPic/sp1.png' %}">
 					</div>
 					<div class="contentBx">
-						<h2>Nike Shoes</h2>
+						<!-- <h2>The Times of India</h2> -->
 
-						<a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, odit!</a>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="imgBx">
-						<img src="{% static 'SponsorsPic/abc.png' %}">
-					</div>
-					<div class="contentBx">
-						<h2>Nike Shoes</h2>
-
-						<a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, odit!</a>
 
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="imgBx">
-						<img src="{% static 'SponsorsPic/blue.png' %}">
+						<img src="{% static 'SponsorsPic/sp2new.png' %}">
 					</div>
 					<div class="contentBx">
-						<h2>Nike Shoes</h2>
-						<a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, odit!</a>
+						<!-- <h2>Trak Labs</h2> -->
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="imgBx">
-						<img src="{% static 'SponsorsPic/blue.png' %}">
+						<img src="{% static 'SponsorsPic/sp3.png' %}">
 					</div>
 					<div class="contentBx">
-						<h2>Nike Shoes</h2>
-						<a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, odit!</a>
+						<!-- <h2>Interview Buddy</h2> -->
+
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="imgBx">
-						<img src="{% static 'SponsorsPic/imgs.png' %}">
+						<img src="{% static 'SponsorsPic/sp4.png' %}">
 					</div>
 					<div class="contentBx">
-						<h2>Nike Shoes</h2>
-						<a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, odit!</a>
+						<!-- <h2>adda52.com</h2> -->
+
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="imgBx">
-						<img src="{% static 'SponsorsPic/blue.png' %}">
+						<img src="{% static 'SponsorsPic/sp5.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>coolberg</h2> -->
+
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp6.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>boookd.com</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp7.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>FORTUNE</h2> -->
+
+					</div>
+				</div>
+
+
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp8.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>GrabOn</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp9.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>STEP SET GO</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp10.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>hoverRobotix</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp11.jpe' %}g">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>Google Cloud</h2> -->
+
+					</div>
+				</div>
+				<!-- <div class="card">
+					<div class="imgBx">
+						<img src="sp12.jpg' %}">
 					</div>
 					<div class="contentBx">
 						<h2>Nike Shoes</h2>
-						<a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, odit!</a>
+		
+					</div>
+				</div> -->
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp13.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>Indian Oil</h2> -->
+
 					</div>
 				</div>
+				<!-- <div class="card">
+					<div class="imgBx">
+						<img src="sp14.jpg' %}">
+					</div>
+					<div class="contentBx">
+						<h2>Innovadores</h2>
+		
+					</div>
+				</div> -->
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp15.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>Innovadores</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp16.web' %}p">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>iSchoolConnect</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp17.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>KnowAFest.com</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp18.jpg' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>Kwikpic</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp19.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>MENTORX</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp20.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>RevUp</h2> -->
+
+					</div>
+				</div>
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp21.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>SCONTO</h2> -->
+
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp22.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>unstop</h2> -->
+					</div>
+				</div>
+
+                <div class="card">
+					<div class="imgBx">
+						<img src="{% static 'SponsorsPic/sp23.png' %}">
+					</div>
+					<div class="contentBx">
+						<!-- <h2>Wolfram</h2> -->
+					</div>
+				</div>
+
 			</div>
 		</div>
 
@@ -952,7 +1105,7 @@ box-shadow: 0 0 10px rgb(248, 0, 194); */
 						</div>
 						<div class="sponsor-box m-auto col-sm-6 col-md-4 col-lg-2" style="display: block !important;">
 							<a href="{{ sponsor.url }}" style="text-decoration: none;"><img class="sponsorImg m-auto"
-									src="{% static 'sponsors/Full blue.png' %}"
+									src="{% static 'sponsors/Full sp.png' %}"
 									style="margin-top: 90px !important;margin-bottom: 70px !important; ">
 								<center style="color:white; margin-bottom:15px; "><strong>Labkafe</strong></center>
 
