--- a/flow/templates/flow/workshop.html
+++ b/flow/templates/flow/workshop.html
@@ -21,6 +21,11 @@
       body {
         background-image: url("{% static 'workshops/media_workshops/bg.png' %}");
       }
+
+      .navMenu a {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: bolder !important;
+      }
     </style>
     <link rel="stylesheet" href="{% static 'workshops/css/main.css' %}" />
   </head>
@@ -120,7 +125,7 @@
         {%endif
         %}
       >
-        <img src="media/{{workshop.logo }}" class="card-image" />
+        <img src="media/{{ workshop.logo }}" class="card-image" />
         <div class="card-text">
           {%if workshop.registration_open%}
           <p class="card-tag">Registration Open!</p>
@@ -137,7 +142,45 @@
       </div>
       {%endfor %}
     </div>
+    <script>
+      const modal = document.querySelector('.modal')
+      const modalBg = document.querySelector('.modal-bg')
+
+      const modalImg = document.querySelector('.modal-image')
+      const modalHeader = document.querySelector('.modal-header')
+      const modalTitle = document.querySelector('.modal-title')
+      const modalDesc = document.querySelector('.modal-desc')
+      const modalContact = document.querySelector('.modal-contact')
+      const modalDate = document.querySelector('.modal-date')
+      const modalVenue = document.querySelector('.modal-venue')
+      const modalLink = document.querySelector('.modal-btn')
+
+      const openBtns = document.querySelectorAll('.card-btn')
+      openBtns.forEach((btn) => {
+        btn.addEventListener('click', (e) => {
+          const details = e.target.parentNode
+          try {
+            modalImg.src = details.attributes._img.nodeValue
+            modalHeader.textContent = details.attributes._name.nodeValue
+            modalTitle.textContent = details.attributes._id.nodeValue
+            modalDesc.textContent = details.attributes._desc.nodeValue
+            modalContact.textContent = details.attributes._contact.nodeValue
+            modalDate.textContent = details.attributes._date.nodeValue
+            modalVenue.textContent = details.attributes._venue.nodeValue
+            modalLink.href = details.attributes._link.nodeValue
+          } catch (err) {}
+          modalBg.classList.add('open-modal-bg')
+          modal.classList.add('open-modal')
+        })
+      })
+      modalBg.addEventListener('click', (e) => {
+        if (e.target.classList.contains('modal-bg')) {
+          modalBg.classList.remove('open-modal-bg')
+          modal.classList.remove('open-modal')
+        }
+      })
+
+    </script>
     {% include 'flow/navbarAndFooter/footer.html' %}
-    <script src="{% static 'workshops/js/main.js' %}"></script>
   </body>
 </html>
