--- a/flow/static/navbarAndFooter/navbar.css
+++ b/flow/static/navbarAndFooter/navbar.css
@@ -1,4 +1,7 @@
 /* dropdown */
+@import url('https://fonts.googleapis.com/css2?family=Changa&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
 
 .menu, .drop-menu {
   list-style-type: none;
@@ -6,6 +9,21 @@
   margin: 0;
   color: #e97957;
 
+}
+
+#menuAndIcon{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.logoLargeScreen{
+  height: 50px;
+  width: 50px
 }
 
 .menu-item {
@@ -41,8 +59,7 @@ bar and footer */
 
 
 
-.navMenu {
-  /* font-family: 'Unbounded', cursive; */
+.navbarMenu {
   left: 0px;
   right: 0;
   top: 0;
@@ -65,30 +82,31 @@ bar and footer */
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(5.9px);
   z-index: 10001;
+  font-family: 'Unbounded', cursive !important;
 }
 
-.navMenu a {
+.navbarMenu a {
   color: #e8dbd6;
   text-decoration: none;
   font-size: 1rem;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 500 !important;
   display: inline-block;
   transition: 0.3s;
   z-index: 20000;
 }
-.navMenu a:hover{
+.navbarMenu a:hover{
   color: #e97957;
 }
-.navMenu a:active{
+.navbarMenu a:active{
   color: #e97957;
 }
 @media screen and (max-width: 1550px){
-.navMenu a {
+.navbarMenu a {
   font-size: 0.8rem
 }}
 @media screen and (max-width: 1100px){
-  .navMenu {
+  .navbarMenu {
     display: none;
   }
 }
@@ -100,6 +118,7 @@ bar and footer */
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 .aarohan_logo{
+  display: none;
   z-index: 100000;
     position: fixed;
     top: 6px;
@@ -111,8 +130,12 @@ bar and footer */
 }
 @media screen and (max-width:1100px){
   .aarohan_logo{
+    display: block;
   width: 70px;
   height: 70px;
+  }
+  .logoLargeScreen{
+    display: none;
   }
 }
 .section-center{
