--- a/flow/static/teams/css/style3.css
+++ b/flow/static/teams/css/style3.css
@@ -80,7 +80,7 @@ top:20px;
 
 .open2{
    visibility: hidden;
-    z-index:100;
+    z-index:10000000;
     width: 100vw;
     position: absolute;
     top: 0;
@@ -113,7 +113,7 @@ top:20px;
 
  .card img{
   width: 100%;
-  height: 130%;
+  height: 180px;
   border-radius: 20px;
 }
 
