--- a/flow/templates/flow/homepage.html
+++ b/flow/templates/flow/homepage.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AAROHAN 2023</title>
   <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
+  <link rel="shortcut icon" type="image/jpg" href="{% static 'img/aarohan_logo1-01.png' %}">
   <link rel="stylesheet" href="{% static 'homepage/css/style.css'%}">
 </head>
 <body>
@@ -21,8 +22,8 @@
 		<div class="line line--3"></div>
 	</div>
 	<div class="nav-links">
-    <a href="{% url 'socialInitiatives' %}" class="link">Corporate Social Responsibilities</a>
-		<a href="{% url 'industrialvisits' %}" class="link">Industrial Visits</a>
+    <a href="{% url 'socialInitiatives' %}" class="link">Initiatives</a>
+		<!-- <a href="{% url 'industrialvisits' %}" class="link">Industrial Visits</a> -->
 		<a href="{% url 'events' %}" class="link">Events</a>
     <a href="{% url 'workshops' %}" class="link">Workshops</a>
     <a href="{% url 'timeline' %}" class="link">Timeline</a>
@@ -46,7 +47,7 @@
 
 </nav>
 <div class="logos"> 
-  <img class="logo arhn_logo" src="{% static 'img/aarohan_logo1-01.png' %}" alt="" srcset="" >
+  <img class="logo arhn_logo" src="{% static 'img/aarhn.png' %}" alt="" srcset="" >
   <img class="logo arhn_logo" src="{% static 'img/SAVE_20230228_135222.png' %}" alt="" srcset="" >
 </div>
 <!-- </div> -->
