--- a/flow/templates/flow/teams.html
+++ b/flow/templates/flow/teams.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <title>Teams Page</title>
     <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
+    <link rel="shortcut icon" type="image/jpg" href="{% static 'img/aarohan_logo1-01.png' %}">
 
     <link
       rel="stylesheet"
@@ -203,7 +204,7 @@
       src="https://uploads-ssl.webflow.com/62c7ea6fad2d0134623d6bde/js/webflow.8dfeddd84.js"
       type="text/javascript"
     ></script>
-    <script src="{% static 'teams/js/team2.js' %}"></script>
+    <script src="{% static 'teams/js/teamrun.js' %}"></script>
     <!--[if lte IE 9
       ]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script
     ><![endif]-->
