--- a/flow/templates/flow/contactus.html
+++ b/flow/templates/flow/contactus.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="../../static/css/contactus.css" />
-    <title>Contact Us | Aarohan 2023</title>
+    <title>Contact Us | Aarohan 2024</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
     <!-- OFFCANVAS For Profile Click Event-->
     <div class="container">
       <div class="side-header">
-        <h1 class="side-header">Contact Us</h1>
+        <h1 class="side-header" style="color:#13bbe1;">Contact Us</h1>
       </div>
       <!-- <div class="main"> -->
         <div class="contact-mail">
