About Us UI fixes

--- a/flow/templates/flow/aboutus.html
+++ b/flow/templates/flow/aboutus.html
@@ -87,16 +87,17 @@
 
               <div class="homepagecard">
                 <h2 class="changeText">
-                  <span class="aarohan">Aarohan</span>
+                  <span class="aarohan">Aarohan </span>
                   <span class="year">2024</span>
                 </h2>
                 <h2 class="changeText">
                   <span class="aboutus">About us</span>
                 </h2>
-  
-                <p>
-                  National Institute of Technology, Durgapur has been a pioneering educational institute for above 50 years. It boasts of students who have achieved par excellence in the field of academics and organization. Aarohan is the Annual Techno-management fest of NIT Durgapur, the 2nd Largest of its kind in the whole of eastern India. It is organised by a group of young enthusiasts under the supervision of highly responsible faculties. This festival has been constantly fostering the enthusiastic students to showcase their talents and uplifting their spirits by taking parts in various events, and imbibing in them a sense of belonging to the competitive world that lies ahead, which we shall be continuing for years to come. Aarohan is not only a celebration of the spirit of engineering but also an opportunity for students to explore their creative limits, experiment, make mistakes and have fun while continuously re-inventing themselves over the course of the fest. Aarohan has been leading the light of instilling a culture of science, technology and innovation among the youth of the nation. With more than 40 events covering all genres of technology and management, Aarohan brings some of the best solutions for the mankind to the fore.
-                </p>
+                <div style="backdrop-filter:blur(4px); padding: 1rem; border-radius: 20px;">
+                  <p>
+                    National Institute of Technology, Durgapur has been a pioneering educational institute for above 50 years. It boasts of students who have achieved par excellence in the field of academics and organization. Aarohan is the Annual Techno-management fest of NIT Durgapur, the 2nd Largest of its kind in the whole of eastern India. It is organised by a group of young enthusiasts under the supervision of highly responsible faculties. This festival has been constantly fostering the enthusiastic students to showcase their talents and uplifting their spirits by taking parts in various events, and imbibing in them a sense of belonging to the competitive world that lies ahead, which we shall be continuing for years to come. Aarohan is not only a celebration of the spirit of engineering but also an opportunity for students to explore their creative limits, experiment, make mistakes and have fun while continuously re-inventing themselves over the course of the fest. Aarohan has been leading the light of instilling a culture of science, technology and innovation among the youth of the nation. With more than 40 events covering all genres of technology and management, Aarohan brings some of the best solutions for the mankind to the fore.
+                  </p>
+                </div> 
               </div>
 
             </div>
