--- a/flow/static/css/aboutus/about.css
+++ b/flow/static/css/aboutus/about.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face {
+  font-family: Astro;
+  src: url("../../font/as.ttf");
+}
 /*
 *
 * Trunk version 2.0.0
@@ -6088,15 +6092,15 @@ html.rd-navbar-fixed-linked .page {
 }
 
 .changeText {
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 .changeText .aarohan {
   /* display: none; */
   font-weight: 600;
-  color: #E14413;
+  color: #13bbe1;
   font-size: 30px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Astro";
 }
 
 .changeText .year {
@@ -6104,27 +6108,33 @@ html.rd-navbar-fixed-linked .page {
   /* font-weight: 900; */
   font-weight: 600;
   font-size: 30px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Astro";
 }
 
-@font-face {
+/* @font-face {
   font-family: 'astrofont';
   src: url('/static/fonts/as.ttf') format('truetype');
-}
+} */
 
 
 .changeText .aboutus {
   /* display: none; */
-  color: #E14413;
+  color: #13bbe1;
   font-weight: lighter;
-  font-family: 'astrofont', sans-serif;
+  font-family: "Astro";
   text-transform: capitalize;
-  font-size: 80px;
+  font-size: 60px;
 }
 
 @media screen and (max-width: 768px) {
   .changeText .aboutus {
-    font-size: 65px;
+    font-size: 45px;
+  }
+  .changeText .aarohan {
+    font-size: 20px;
+  }
+  .changeText .year {
+    font-size: 20px;
   }
 }
 
