--- a/flow/static/css/timeline_css.css
+++ b/flow/static/css/timeline_css.css
@@ -1,392 +1,405 @@
-
-@import url('http://fonts.cdnfonts.com/css/lemonmilk');
-
-
-.timeline {
-	display: flex;
-	margin: 0 auto;
-	flex-wrap: wrap;
-	flex-direction: column;
-	max-width: 850px;
-	position: relative;
-}
-.timeline__content-title {
-	font-weight: normal;
-	font-size: 66px;
-	margin: -10px 0 0 0;
-	transition: 0.4s;
-	padding: 0 10px;
-	box-sizing: border-box;
-	font-family: 'Pathway Gothic One', sans-serif;
-	color: #fff;
-	
-}
-.timeline:before {
-	position: absolute;
-	left: 50%;
-	width: 3px;
+button {
+	background: transparent;
+	border: none;
+	cursor: pointer;
+	outline: none;
+  }
+  
+  .body {
+	/* background-color: #1a1a1a; */
+	overflow: hidden;
+  }
+  
+  .background-animation {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
 	height: 100%;
-	margin-left: -1px;
-	content: "";
-	background: #ffc0cb;
-}
-@media only screen and (max-width: 767px) {
-	.timeline:before {
-		left: 40px;
-   }
-}
-.timeline-item {
-	padding: 40px 0;   
-	transition: 0.5s;
-	box-sizing: border-box;
-	width: calc(50% - 40px);
-	display: flex;
-	position: relative;
-	transform: translateY(-80px);
-}
-
-.timeline-item:before {
-
-	color: rgba(255, 255, 255, .5);
-	font-size: 13px;
-	font-family: 'Pathway Gothic One', sans-serif;
-	border-left: 2px solid rgba(255, 255, 255, .5);
-	
-	margin-top: -5px;
-   
-	right: calc(-100% - 56px);
-
-}
-.timeline-item:nth-child(even) {
-	align-self: flex-end;
-   
-}
-.timeline-item:nth-child(even):before {
-	right: auto;
-	text-align: right;
-	left: calc(-100% - 56px);
-	padding-left: 0;
-	border-left: none;
-	border-right: 2px solid rgba(255, 255, 255, .5);
-	padding-right: 15px;
-}
-
-
-
-
-@media only screen and (max-width: 767px) {
-	.timeline-item {
-		align-self: baseline !important;
-		width: 100%;
-		padding: 0 30px 50px 80px;
-   }
-	.timeline-item:before {
-		left: 10px !important;
-		right: 10px !important;
-		padding: 0 !important;
-		top: 50px;
-		text-align: center !important;
-		width: 60px;
-		border: none !important;
-   }
-	.timeline-item:last-child {
-		padding-bottom: 40px;
-   }
-   .timeline-header{
-	   padding-bottom: 20px;
-   }
-   .timeline-header__title {
-	   color: #fff;
-	   font-size: 38px;
-	   font-family: Cardo;
-	   font-weight: normal;
-	   margin: 0;
-	   
-	   background: linear-gradient(90deg, rgb(178, 67, 50) 0%, rgb(196, 58, 58) 26%, rgba(205,74,185,1) 47%, rgba(203,114,26,1) 74%, rgb(166, 88, 42) 100%);
-	   -webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	font-weight: bold;
-}
-
-}
-
-.timeline-container {
-	margin-top: 80px !important;
+	z-index: -1;
+  }
+  
+  /* .section SECTION
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+  
+  .section {
+	z-index: 50;
+	padding: 50px 0;
+  }
+  
+  .section .container {
 	width: 100%;
-	position: relative;
-	transition: 0.3s ease 0s;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-
-.timeline-header {
-	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
 	text-align: center;
-	margin-bottom: 80px;
+  }
+  
+  .section h1 {
+	font-size: 2.5rem;
+  }
+  
+  .section h2 {
+	font-size: 1.3rem;
+  }
+  
+  /* TIMELINE
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+  
+  .timeline {
+	white-space: nowrap;
+   
+  }
+  
+  .timeline ol {
+	font-size: 0;
+	width: 100vw;
+	padding: 250px 0;
+	transition: all 1s;
+  }
+  
+  .timeline ol li {
 	position: relative;
-	padding-top: 18px;
-	
-}
-.timeline-header__title {
-	color: #fff;
-	font-size: 5rem;
-	font-family: 'Lemon/Milk light',
-	sans-serif;
-	font-weight:220;
-	margin: 0;
-	font-family: 'Lemon/Milk light', sans-serif;
-	background-color: #00DBDE;
-	background-image: linear-gradient(90deg, #d62929, 40%, #000,69%, #d63629 100%);
-
-	-webkit-background-clip: text;
- -webkit-text-fill-color: transparent;
- font-weight: bold;
-	
-}
-.timeline-header__subtitle {
-
-	color: white;
-	font-family: 'comfortaa' sans-serif;
-	font-weight: 600;
-	font-size: 20px;
-	letter-spacing: 5px;
-	margin: 10px 0 0 0;
-	padding-left: 7px;
-	margin-bottom: 10px;
-}
-
-#video1{
-   width: 100%;
- height: 100%;
- object-fit: cover;
- position: fixed;
- left: 0;
- right: 0;
- top: 0;
- bottom: 0;
- z-index: -1;
-
-}
-@keyframes fadeIn {
-   from {top: 20%; opacity: 0;}
-   to {top: 100; opacity: 1;}
-   
- }
- 
- @-webkit-keyframes fadeIn {
-   from {top: 20%; opacity: 0;}
-   to {top: 100; opacity: 1;}
-   
- }
-.timeline-card{
-   background-color: rgba(28, 0, 73, 0.5);
-   border: 3px solid;
-   border-width: 3px;
-   padding: 7%;
-   padding-top: 20%;
-   color: rgb(190, 135, 228);
-   font-weight: bold;
-   border-radius:15px !important;
-   border-radius:50px; 
-}
-body::-webkit-scrollbar {
-   display: none;
-}
-.timelin-card:before{
-   background: linear-gradient(-120deg, #00c0c7, #ff009d);
-   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-   -webkit-mask-composite: destination-out;
-   mask-composite: exclude; 
-}
- .card {
-   background-color: rgba(15, 15, 15, 0.671) !important;
-   width: 90%;
-   height: fit-content;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   position: relative;
-   border-radius: 15px !important;
-   margin: 18px 6.5px;
-   padding-bottom: 5px;
-   padding-top: 2px; 
-   z-index: 10;
-   opacity: 0.8;
- }
- .card::before {
-   content: "";
-   position: absolute;
-   top: 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   z-index: -1;
-   border-radius: 15px;
-   padding: 4px;
-   background:linear-gradient(-120deg, #e97957, #d63629, #280e09);
-   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-   -webkit-mask-composite: destination-out;
-   mask-composite: exclude;
- }
-
- .cardWrapper{
-   padding: 10px !important;
- }
-
- .event {
-	 
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   width: 285px;
-   margin: 8px 0px 4px 0px;
-   margin-top: 20px;
-   margin-bottom: 20px;
-   color: #fff;
- }
- .event h1 {
-   font-size: 18px;
-   margin: 0px;
- color:white;
- font-weight: bold;
- }
- .cardWrapper h1{
-   padding-left: 12px;
- }
- .cardWrapper h2{
-	padding-left: 12px;
-	padding-bottom: 10px;
-	font-size:18px
-	
- }
- .card h2 {
-   margin: 0px;
-   font-size: 13px;
- }
- 
-
-
- 
-
-
-.cardWrapper h2{
-   color:white !important;
-   font-size:18px
-}
-.cardWrapper h1{
-   font-size: 25px;
-}
-@media only screen and (max-width:400px){
-   .timeline-container{
-	   width: 375px;
-	   overflow-x: hidden;
-   }
-   .timeline-container:before{
-	   width:375px;
-	   overflow-x: hidden;
-   }
-}
-@media only screen and (max-width:390px){
-   .timeline-container{
-	   width: 370px;
-	   overflow-x: hidden;
-   }
-   .timeline-container:before{
-	   width:370px;
-	   overflow-x: hidden;
-   }
-}
-@media only screen and (max-width:375px){
-   .timeline-container{
-	   width: 360px;
-	   overflow-x: hidden;
-   }
-   .timeline-container:before{
-	   width:360px;
-	   overflow-x: hidden;
-   }
-}
-@media only screen and (max-width:350px){
-   .timeline-container{
-	   width: 330px;
-	   overflow-x: hidden;
-   }
-   .timeline-container:before{
-	   width:330px;
-	   overflow-x: hidden;
-   }
-}
-@media only screen and (max-width:767px){
-   .card{
-	   margin-left: -25.5px;
-
-   }
-   .timeline::before{
-	   overflow-x: hidden;	
-   }
-   
-}
-@media only screen and (max-width:767px){
-	#video1{
-		object-fit: cover;
- position: fixed;
+	display: inline-block;
+	list-style-type: none;
+	width: 160px;
+	height: 3px;
+	background: #fff;
+  }
+  
+  .timeline ol li:last-child {
+	width: 280px;
+  }
+  
+  .timeline ol li:not(:first-child) {
+	margin-left: 14px;
+  }
+  
+  .timeline ol li:not(:last-child)::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: calc(100% + 1px);
+	bottom: 0;
+	width: 12px;
+	height: 12px;
+	transform: translateY(-50%);
+	border-radius: 50%;
+	background: #f45b69;
+  }
+  
+  .timeline ol li div {
+	position: absolute;
+	left: calc(100% + 7px);
+	width: 280px;
+	padding: 15px;
+	font-size: 1rem;
+	white-space: normal;
+	color: black;
+	background: white;
+  }
+  
+  .timeline ol li div::before {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 0;
+	height: 0;
+	border-style: solid;
+  }
+  
+  .timeline ol li:nth-child(odd) div {
+	top: -16px;
+	transform: translateY(-100%);
+	height: 211px;
+	border-radius: 10px;
+	background: rgba( 255, 255, 255, 0.2 );
+	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+	backdrop-filter: blur( 0px );
+	-webkit-backdrop-filter: blur( 0px );
+	border-radius: 10px;
+	border: 1px solid rgba( 255, 255, 255, 0.18 );  color: white;
+	padding: 20px;
+	box-shadow: #ec9b0885 0 0 0px 3px;
+  }
+  
+  .timeline ol li:nth-child(odd) div::before {
+	top: 100%;
+	border-width: 8px 8px 0 0;
+	border-color: white transparent transparent transparent;
+  }
+  
+  .timeline ol li:nth-child(even) div {
+	top: calc(100% + 16px);
+	height: 211px;
+	border-radius: 10px;
+	background: rgba( 255, 255, 255, 0.2 );
+	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+	backdrop-filter: blur( 0px );
+	-webkit-backdrop-filter: blur( 0px );
+	border-radius: 10px;
+	border: 1px solid rgba( 255, 255, 255, 0.18 );  color: white;
+	padding: 20px;
+	box-shadow: #ec9b0885 0 0 0px 3px;
+  }
+  
+  .timeline ol li:nth-child(even) div::before {
+	top: -8px;
+	border-width: 8px 0 0 8px;
+	border-color: transparent transparent transparent white;
+  }
+  
+  .timeline time {
+	display: block;
+	font-size: 1.2rem;
+	font-weight: bold;
+	margin-bottom: 8px;
+  }
+  
+  /* TIMELINE ARROWS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+  
+  .timeline .arrows {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 20px;
+  }
+  
+  .timeline .arrows .arrow__prev {
+	z-index: 1;
+  }
+  
+  .timeline .arrows .arrow__next {
+  
+	z-index: 1;
+  }
+  
+  .timeline .disabled {
+	opacity: 0.5;
+  }
+  
+  .timeline .arrows img {
+	width: 45px;
+	height: 45px;
+  }
+  
+  /* GENERAL MEDIA QUERIES
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+  @media screen and (max-width: 599px) {
+	.timeline ol,
+	.timeline ol li {
+	  width: auto;
 	}
-}
-@media only screen and (max-width:488px){
-
-.card{
-   font-size: 5px;
-	width:fit-content ;
-}
-}
-
-
-.cardWrapper h2{
-   font-size:180px;
-}
-.card h2{
-   font-size:17px;
-}
-
-.Dayz{
-   margin: 50px auto 20px;
-}
-
-.Dayz a:nth-child(2){
-   margin: 0px 5px 0px 5px;
-}
-.Dayz a:nth-child(3) {
-   margin-right: 5px;
-}
-
-.btn-ap{
-   color: #fff !important;
-   font-weight: 600;
-   background: linear-gradient(45deg, #d63629 0%, #842017 60%);
-   font-size: 20px !important;
-   padding:10px;
-   background-size: 100% 100%;
-   border-radius: 7px;
-   text-decoration :none !important;
-   transition: 0.5s all ease-in-out;
-   animation: glow 1s ease infinite linear;
-}
-
-@keyframes glow{
-	   0% {
-		   background-position: 0% 50%;
-	   }
-
-	   50% {
-		   background-position: 100% 50%;
-	   }
-
-	   100% {
-		   background-position: 0% 50%;
-	   }
-}
-
-.btn-ap:hover {
-   transition: 0.5s all ease-in-out;
-}
+  
+	.timeline ol {
+	  padding: 0;
+	  transform: none !important;
+	}
+  
+	.timeline ol li {
+	  display: block;
+	  height: auto;
+	  background: transparent;
+	}
+  
+	.timeline ol li:first-child {
+	  margin-top: 25px;
+	}
+  
+	.timeline ol li:not(:first-child) {
+	  margin-left: auto;
+	}
+  
+	.timeline ol li div {
+	  position: static;
+	  width: 94%;
+	  height: auto !important;
+	  margin: 0 auto 25px;
+	}
+  
+	.timeline ol li:nth-child(odd) div {
+	  transform: none;
+	}
+  
+	.timeline ol li:nth-child(odd) div::before,
+	.timeline ol li:nth-child(even) div::before {
+	  left: 50%;
+	  top: 100%;
+	  transform: translateX(-50%);
+	  border: none;
+	  border-left: 1px solid white;
+	  height: 25px;
+	}
+  
+	.timeline ol li:last-child,
+	.timeline ol li:nth-last-child(2) div::before,
+	.timeline ol li:not(:last-child)::after,
+	.timeline .arrows {
+	  display: none;
+	}
+  }
+  
+  /* FOOTER STYLES
+  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+  .page-footer {
+	position: fixed;
+	right: 0;
+	bottom: 20px;
+	display: flex;
+	align-items: center;
+	padding: 5px;
+	color: black;
+	background: rgba(255, 255, 255, 0.65);
+  }
+  
+  .page-footer a {
+	display: flex;
+	margin-left: 4px;
+  }
+  
+  
+  
+  /* Style for timeline sections */
+  .timeline-section {
+	margin-top: 20px;
+  }
+  
+  /* Style for day buttons */
+  .day-button {
+	background-color: #456990;
+	color: #fff;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	margin-right: 10px;
+  }
+  
+  /* Active button style */
+  .day-button.active {
+	background-color: #f45b69;
+  }
+  
+  /* Hover effect for buttons */
+  .day-button:hover {
+	background-color: #3d5170;
+  }
+  
+  /* Adjustments for smaller screens */
+  @media screen and (max-width: 768px) {
+	.day-button {
+	  margin-bottom: 10px;
+	  display: block;
+	  width: 100%;
+	}
+  }
+  .Dayz {
+	z-index: 50;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap; /* Allowing flex items to wrap */
+	margin-top: 2.7%;
+  }
+  
+  .btn-ap {
+	text-decoration: none;
+	padding: 4px 5px; /* Adjusted padding */
+	margin: 5px; 
+	border: 2px solid white;
+	border-radius: 5px;
+	color: white;
+	transition: all 0.3s ease;
+	font-size: 20px; /* Adjusted font size */
+	font-weight: bold;
+  }
+  @media screen and (max-width: 768px) {
+	.btn-ap {
+	  width: calc(50% - 20px); /* Adjusted width for smaller screens */
+	  font-size: 16px; /* Decreased font size for smaller screens */
+	}
+  }
+  
+  
+  .btn-ap:hover {
+	color: black; /* White text color on hover */
+	background-color: rgb(175, 105, 0); /* Black background color on hover */
+	border-color: rgb(255, 255, 255); /* White border color on hover */
+  }
+  
+  /* Responsive styles */
+  
+  
+	
+  @media screen and (max-width: 768px) {
+	.Dayz {
+	  
+	  display: flex;
+	  flex-wrap: wrap; 
+	  flex-direction: row;/* Allow flex items to wrap */
+	  justify-content: center; /* Center-align flex items */
+	  margin-top: 20px;
+	}
+  
+	.btn-ap {
+	  text-decoration: none;
+	  padding: 12px 50px; /* Adjusted padding */
+	  margin: 10px; /* Increased margin for better spacing */
+	  border: 2px solid white;
+	  border-radius: 5px;
+	  color: white;
+	  transition: all 0.3s ease;
+	  font-size: 20px; /* Adjusted font size */
+	  font-weight: bold; /* Corrected property name */
+	}
+  }
+	@media screen and (max-width: 768px) {
+	
+	  .Dayz
+	   {
+		margin: 10px;
+		margin-top: revert-layer; /* Decreased margin for smaller screens */
+	  }
+	}
+  .tcontainer{
+	position: relative;
+  
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	overflow: hidden;
+	background-image: url("https://img.freepik.com/free-photo/illustration-circle-with-abstract-neon-light-effects-great-futuristic-background_181624-26037.jpg?w=1060");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	padding: 2rem;
+  
+  }
+  .timeline_vid{
+	  min-width: 100%;
+	  min-height: 100%;
+	  width: auto;
+	  height: auto;
+	  position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-50%, -50%);
+	  z-index: -1;
+  }
+  
+  
+  
+  li .card1{
+	height: 211px;
+	border-radius: 10px;
+	background: rgba(255, 255, 255, 0.1);
+	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+	backdrop-filter: blur(0px);
+	-webkit-backdrop-filter: blur(0px);
+	border-radius: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.18);
+	color: white;
+	padding: 20px;
+	box-shadow: #ec9b0885 0 0 0px 3px;
+  }
