--- a/flow/static/attractions/css/_main.css
+++ b/flow/static/attractions/css/_main.css
@@ -45,17 +45,68 @@ body::after {
   gap: 2rem;
 }
 
+.draw-border {
+  box-shadow: inset 0 0 0 4px #e97957;
+  color: #bff8fb;
+  -webkit-transition: color 0.25s 0.0833333333s;
+  transition: color 0.25s 0.0833333333s;
+  position: relative;
+}
+
+.draw-border::before,
+.draw-border::after {
+  border: 0 solid transparent;
+  box-sizing: border-box;
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  width: 0rem;
+  height: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.draw-border::before {
+  border-bottom-width: 4px;
+  border-left-width: 4px;
+}
+
+.draw-border::after {
+  border-top-width: 4px;
+  border-right-width: 4px;
+}
+
+
+.draw-border:hover::before,
+.draw-border:hover::after {
+  border-color: #e27a04;
+  -webkit-transition: border-color 0s, width 0.25s, height 0.25s;
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+
+.draw-border:hover::before {
+  -webkit-transition-delay: 0s, 0s, 0.25s;
+  transition-delay: 0s, 0s, 0.25s;
+}
+
+.draw-border:hover::after {
+  -webkit-transition-delay: 0s, 0.25s, 0s;
+  transition-delay: 0s, 0.25s, 0s;
+}
+
+
 .card {
   width: 100%;
   display: flex;
   flex-direction: row;
   gap: 1rem;
   padding: 1.5rem;
-  background: rgba(255, 255, 255, 0.6);
+  background: transparent;
   border: 2px solid rgba(255, 255, 255, 0.7);
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(10px);
-  border-radius: 30px;
   position: relative;
 }
 
@@ -66,7 +117,7 @@ body::after {
 .card-image {
   max-width: 200px;
   max-height: 200px;
-  border-radius: 25px;
+
   position: relative;
   aspect-ratio: 1;
 }
@@ -84,7 +135,7 @@ body::after {
   text-transform: uppercase;
   font-size: 1.8rem;
   line-height: 93.52%;
-  color: rgba(40, 15, 10, 0.87);
+  color: rgba(244, 243, 243, 0.87);
 }
 
 .card-title {
@@ -98,7 +149,7 @@ body::after {
 .card-btn {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  color: rgba(40, 15, 10, 0.87);
+  color: rgba(247, 244, 243, 0.87);
   text-decoration: none;
   align-self: flex-end;
   position: absolute;
@@ -237,6 +288,7 @@ body::after {
   .container {
     grid-template-columns: 1fr;
   }
+
   .card {
     flex-direction: column;
     align-items: center;
@@ -264,6 +316,7 @@ body::after {
     border-radius: 150px;
     cursor: pointer;
   }
+
   .card-btn::after {
     content: unset;
   }
