--- a/flow/templates/flow/attractions.html
+++ b/flow/templates/flow/attractions.html
@@ -1,131 +1,125 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Attractions | Aarohan 2022</title>
-    <link
-      rel="shortcut icon"
-      href="{% static 'img/final-logo.png' %}"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="{% static 'attractions/css/_main.css' %}" />
-    <style>
-      @font-face {
-        font-family: 'Transformers';
-        src: url("{% static 'attractions/media_attractions/font.ttf' %}")
-          format('truetype');
-      }
 
-      body {
-        background-image: url("{% static 'attractions/media_attractions/bg.png' %}");
-      }
-      .navMenu a {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: bolder !important;
-      }
-    </style>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Attractions | Aarohan 2022</title>
+  <link rel="shortcut icon" href="{% static 'img/final-logo.png' %}" type="image/x-icon" />
+  <link rel="stylesheet" href="{% static 'attractions/css/_main.css' %}" />
+  <style>
+    @font-face {
+      font-family: 'Transformers';
+      src: url("{% static 'attractions/media_attractions/font.ttf' %}") format('truetype');
+    }
 
-  <body>
-    {% include 'flow/navbarAndFooter/navbar.html' %}
-    <h1 class="head-h1">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1590.86 623.84">
-        <defs>
-          <style>
-            .cls-1 {
-              isolation: isolate;
-            }
-            .cls-2 {
-              opacity: 0.2;
-            }
-            .cls-2,
-            .cls-3,
-            .cls-4,
-            .cls-5 {
-              font-size: 262.85px;
-              font-family: 'Transformers';
-            }
-            .cls-2,
-            .cls-3,
-            .cls-4 {
-              fill: none;
-              stroke: #fff;
-            }
-            .cls-3 {
-              mix-blend-mode: screen;
-            }
-            .cls-3,
-            .cls-4 {
-              opacity: 0.6;
-            }
-            .cls-5 {
-              fill: #fff;
-            }
-          </style>
-        </defs>
-        <g class="cls-1">
-          <g id="Layer_2" data-name="Layer 2">
-            <g id="Layer_1-2" data-name="Layer 1">
-              <text class="cls-2" transform="translate(0.5 546.85)">
-                ATTRACTIONS
-              </text>
-              <text class="cls-3" transform="translate(2.49 466.79)">
-                ATTRACTIONS
-              </text>
-              <text class="cls-2" transform="translate(4.51 214.07)">
-                ATTRACTIONS
-              </text>
-              <text class="cls-4" transform="translate(5.49 301.46)">
-                ATTRACTIONS
-              </text>
-              <text class="cls-5" transform="translate(5.49 381.52)">
-                ATTRACTIONS
-              </text>
-            </g>
+    body {
+      background-image: url("{% static 'attractions/media_attractions/bg2.svg' %}");
+    }
+
+    .navMenu a {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: bolder !important;
+    }
+  </style>
+</head>
+
+<body>
+  {% include 'flow/navbarAndFooter/navbar.html' %}
+  <h1 class="head-h1">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1590.86 623.84">
+      <defs>
+        <style>
+          .cls-1 {
+            isolation: isolate;
+          }
+
+          .cls-2 {
+            opacity: 0.2;
+          }
+
+          .cls-2,
+          .cls-3,
+          .cls-4,
+          .cls-5 {
+            font-size: 262.85px;
+            font-family: 'Transformers';
+          }
+
+          .cls-2,
+          .cls-3,
+          .cls-4 {
+            fill: none;
+            stroke: #fff;
+          }
+
+          .cls-3 {
+            mix-blend-mode: screen;
+          }
+
+          .cls-3,
+          .cls-4 {
+            opacity: 0.6;
+          }
+
+          .cls-5 {
+            fill: #fff;
+          }
+        </style>
+      </defs>
+      <g class="cls-1">
+        <g id="Layer_2" data-name="Layer 2">
+          <g id="Layer_1-2" data-name="Layer 1">
+            <text class="cls-2" transform="translate(0.5 546.85)">
+              ATTRACTIONS
+            </text>
+            <text class="cls-3" transform="translate(2.49 466.79)">
+              ATTRACTIONS
+            </text>
+            <text class="cls-2" transform="translate(4.51 214.07)">
+              ATTRACTIONS
+            </text>
+            <text class="cls-4" transform="translate(5.49 301.46)">
+              ATTRACTIONS
+            </text>
+            <text class="cls-5" transform="translate(5.49 381.52)">
+              ATTRACTIONS
+            </text>
           </g>
         </g>
-      </svg>
-    </h1>
-    <div class="modal-bg">
-      <div class="modal">
-        <img src="" class="modal-image" />
-        <div class="modal-text">
-          <h2 class="modal-header"></h2>
-          <p class="modal-title"></p>
-          <p class="modal-desc"></p>
-          <div>
-            <a href="" class="modal-btn">Visit page</a>
-          </div>
+      </g>
+    </svg>
+  </h1>
+  <div class="modal-bg">
+    <div class="modal">
+      <img src="" class="modal-image" />
+      <div class="modal-text">
+        <h2 class="modal-header"></h2>
+        <p class="modal-title"></p>
+        <p class="modal-desc"></p>
+        <div>
+          <a href="" class="modal-btn">Visit page</a>
         </div>
       </div>
     </div>
-    <div class="container">
-      {% for attraction in major_attrs_slide %}
-      <div
-        class="card"
-        _name="{{ attraction.name }}"
-        _title="{{ attraction.title }}"
-        _img="{{ attraction.image.url }}"
-        {%if
-        attraction.url
-        %}
-        _link="{{ attraction.url }}"
-        {%endif
-        %}
-        _desc="{{ attraction.description }}"
-      >
-        <img src="{{ attraction.image.url }}" class="card-image" />
-        <div class="card-text">
-          <h2 class="card-header">{{ attraction.name }}</h2>
-          <p class="card-title">{{ attraction.title }}</p>
-        </div>
-        <a class="card-btn">Read More</a>
+  </div>
+  <div class="container">
+    {% for attraction in major_attrs_slide %}
+    <div class="card draw-border" _name="{{ attraction.name }}" _title="{{ attraction.title }}"
+      _img="{{ attraction.image.url }}" {%if attraction.url %} _link="{{ attraction.url }}" {%endif %}
+      _desc="{{ attraction.description }}">
+      <img src="{{ attraction.image.url }}" class="card-image" />
+      <div class="card-text">
+        <h2 class="card-header">{{ attraction.name }}</h2>
+        <p class="card-title">{{ attraction.title }}</p>
       </div>
-      {% endfor %}
+      <a class="card-btn">Read More</a>
     </div>
-    <script src="{% static 'attractions/js/main.js' %}"></script>
-    {% include 'flow/navbarAndFooter/footer.html' %}
-  </body>
+    {% endfor %}
+  </div>
+  <script src="{% static 'attractions/js/main.js' %}"></script>
+
+</body>
+
 </html>
