--- a/flow/templates/flow/aarohan_timeline.html
+++ b/flow/templates/flow/aarohan_timeline.html
@@ -38,7 +38,7 @@
       Your browser does not support the video tag.
   </video>  {% endcomment %} -->
 
-  <img src="{% static 'images/timeline_bg.jpg}" alt="">
+  {% comment %} <img src="{% static 'images/timeline_bg.jpg' %}" alt=""> {% endcomment %}
 
   <div class="Dayz">
        
