--- a/flow/static/workshops/css/main.css
+++ b/flow/static/workshops/css/main.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Bayon&family=Poppins:wght@600;700&display=swap');
 
 * {
   margin: 0;
@@ -7,11 +8,13 @@
 }
 
 body {
-  background-image: url('/static/workshops/media_workshops/bg.png');
+  background-image: url('/static/workshops/media_workshops/workbg.png');
   background-size: cover;
+  object-fit: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   min-height: 100vh;
+  overflow-x: hidden ;
 }
 
 body::after {
@@ -32,75 +35,103 @@ body::after {
   padding-inline: 0.5rem;
   margin-inline: auto;
   user-select: none;
-  margin-top: 5rem;
 }
 
-.container {
-  width: 100%;
+.workshop-card-container {
+  width: 100vw;
   max-width: 1200px;
   padding-inline: 0.5rem;
+  margin-top: -50%;
   /* background: blue; */
   margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 2rem;
+  margin-bottom: 15rem;
 }
 
-.card {
-  width: 100%;
+.workshop-card {
+  /* width: 100%; */
+  /* margin-top: -50%; */
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 1rem;
-  padding: 1.5rem;
-  background: hsl(14, 100%, 85%);
-  border: 4px solid hsl(10, 63%, 10%);
-  /* box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25); */
+  background-image: url('../../gridbg.png');
   backdrop-filter: blur(10px);
   border-radius: 15px;
+  font-family: "Bayon", sans-serif !important;
+  font-weight: 700;
+  opacity: 0.8;
+  color: #fff;
+  font-style: normal;
+
   position: relative;
   transition: transform 100ms;
+  /* width: 100% !important; */
+  padding: 1em 1em 1em 1em;
+  grid-column: 1/ span 2;
+  width: 306px;
+  /* box-sizing: border-box; */
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  position: relative;
+  margin: 18px 6.5px;
+  animation-duration: 500ms;
+  animation-fill-mode: backwards;
+  border: 2px solid #fa851b;
+  
 }
-.card:hover {
+.workshop-card:hover {
   transform: scale(1.02);
 }
 
-.card *:empty(:not(img)) {
+.workshop-card *:empty(:not(img)) {
   display: none;
 }
 
-.card-image {
-  max-width: 200px;
-  max-height: 200px;
-  border-radius: 15px;
-  position: relative;
-  aspect-ratio: 1;
+.workshop-card-image {
+  width: 306px;
+  height: 320px;
+  object-fit: cover;
+  /* border-bottom: 2px solid #fa851b; */
+  /* position: relative; */
+  padding: 10px;
+  border-radius: 2rem;
+  /* aspect-ratio: 1; */
 }
 
-.card-text {
-  font-family: 'Montserrat', sans-serif;
+.workshop-card-text {
+  font-family: "Bayon", sans-serif !important;
+  font-weight: 700;
+  color: #fff;
+  font-style: normal;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 0.5rem;
 }
 
-.card-tag {
+.workshop-card-tag {
   font-size: 0.85rem;
   font-weight: 600;
   display: inline-block;
   align-self: flex-start;
   padding: 0.2em 0.7em;
-  color: hsl(10, 63%, 40%);
-  border: 2px solid hsl(10, 63%, 40%);
+  color: #ff8e24;
+  border: 2px solid #ff8e24;
   border-radius: 500px;
 }
 
-.card-header {
+.workshop-card-header {
   font-weight: 900;
   text-transform: uppercase;
   font-size: 1.8rem;
   line-height: 93.52%;
-  color: rgba(40, 15, 10, 0.87);
+  color: rgba(255, 255, 255, 0.87);
 }
 
 .card-id {
@@ -146,14 +177,26 @@ body::after {
   transform: scaleX(1);
   transition: tramsform 100ms 200ms;
 }
+
+.workshop-card-btn{
+  background: transparent;
+  transition: all 250ms;
+  border-radius: 150px;
+  cursor: pointer;
+  color: #ff8c21;
+  text-decoration: none;
+  align-self: flex-end;
+}
 .card-btn {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  color: rgba(40, 15, 10, 0.87);
+  color: rgba(255, 255, 255, 0.87);
   text-decoration: none;
   align-self: flex-end;
   position: absolute;
   right: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 3rem;
   top: 1rem;
   display: inline-block;
   padding: 0.4rem 0.65rem;
@@ -163,7 +206,7 @@ body::after {
   cursor: pointer;
 }
 
-.card-btn::after {
+.workshop-card-btn::after {
   content: '';
   left: 0;
   right: 0;
@@ -175,7 +218,7 @@ body::after {
   transition: transform 150ms;
 }
 
-.card-btn:hover::after {
+.workshop-card-btn:hover::after {
   transform: scaleX(1);
 }
 
@@ -189,7 +232,7 @@ body::after {
   top: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.2);
-  z-index: 99;
+  z-index: 9;
   backdrop-filter: blur(1px);
   display: grid;
   place-items: center;
@@ -205,17 +248,27 @@ body::after {
 }
 
 .modal {
-  width: 100%;
+  /* width: 100%; */
   max-width: 1000px;
+  display: flex !important;
+  width: 100vw;
+  height: 60vh;
+  align-items: center;
+  justify-content: space-between;
   margin: auto;
   flex-direction: row;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
   padding: 1.5rem;
-  background: hsl(14, 100%, 85%);
-  border: 4px solid hsl(10, 63%, 10%);
-  border-radius: 30px;
-  display: flex;
+  /* background: #ffc4b3; */
+  /* background-image: linear-gradient(#0399C9, #40D1FF); */
+  /* background: rgba(241, 123, 12, 0.633); */
+  background-image: url('../../gridbg.png');
+  object-fit: cover;
+  backdrop-filter: blur(10px);
+  border: 4px solid hsl(24, 100%, 59%);
+  border-radius: 15px;
+  /* display: flex; */
   opacity: 0;
   transform: scaleY(0);
   transition: all 100ms ease-in-out;
@@ -254,7 +307,7 @@ body::after {
   text-transform: uppercase;
   font-size: 1.8rem;
   line-height: 93.52%;
-  color: rgba(40, 15, 10, 0.87);
+  color: rgba(255, 255, 255, 0.87);
 }
 
 .modal-title {
@@ -263,7 +316,7 @@ body::after {
   line-height: 16px;
   text-transform: uppercase;
   text-align: justify;
-  color: rgb(150, 86, 75);
+  color: rgb(255, 255, 255);
 }
 
 .modal-date-venue {
@@ -277,26 +330,27 @@ body::after {
 .modal-venue {
   display: inline-block;
   padding: 0.2rem 0.75rem;
-  border: rgba(40, 15, 10, 0.87) solid 2px;
-  color: rgba(40, 15, 10, 0.87);
+  border: rgba(255, 255, 255, 0.87) solid 2px;
+  color: rgba(255, 255, 255, 0.87);
   font-weight: bold;
   border-radius: 50px;
 }
 
 .modal-desc {
   text-align: justify;
-  color: #212121;
+  color: #ffffff;
 }
 
 .modal-btn-contact {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  gap: 1rem;
   justify-content: space-between;
 }
 
 .modal-contact {
-  color: #442822;
+  color: #ffffff;
   text-decoration: none;
   font-weight: bold;
   border-radius: 50px;
@@ -307,7 +361,7 @@ body::after {
 .modal-btn {
   display: inline-block;
   padding: 0.75rem 2rem;
-  background: #442822;
+  background: #fc8c23;
   color: #fff;
   text-decoration: none;
   font-weight: bold;
@@ -392,5 +446,4 @@ body::after {
   .modal-desc {
     font-size: 14px;
   }
-
 }
