--- a/flow/templates/flow/workshop.html
+++ b/flow/templates/flow/workshop.html
@@ -11,19 +11,31 @@
       href="{% static 'img/final-logo.png' %}"
       type="image/x-icon"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bayon&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       @font-face {
-        font-family: 'Transformers';
+        font-family: "Transformers";
         src: url("{% static 'workshops/media_workshops/font.ttf' %}")
-          format('truetype');
+          format("truetype");
       }
 
       body {
-        background-image: url("{% static 'workshops/media_workshops/bg.png' %}");
+        background-image: url("{% static 'workshops/media_workshops/bgn.png' %}");
       }
 
       .navMenu a {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         font-weight: bolder !important;
       }
     </style>
@@ -46,8 +58,10 @@
             .cls-3,
             .cls-4,
             .cls-5 {
-              font-size: 262.85px;
-              font-family: TransformersMovie, Transformers;
+              font-family: "Rowdies", sans-serif;
+              font-weight: 700;
+              font-size: 190px;
+              font-style: normal;
             }
             .cls-2,
             .cls-3,
@@ -109,10 +123,10 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="workshop-card-container">
       {% for workshop in workshops %}
       <div
-        class="card"
+        class="workshop-card"
         _name="{{workshop.workshopName}}"
         _id="{{workshop.workshopId}}"
         _desc="{{workshop.description}}"
@@ -125,61 +139,60 @@
         {%endif
         %}
       >
-        <img src="media/{{ workshop.logo }}" class="card-image" />
-        <div class="card-text">
+        <img src="media/{{ workshop.logo }}" class="workshop-card-image" />
+        <div class="workshop-card-text">
           {%if workshop.registration_open%}
-          <p class="card-tag">Registration Open!</p>
+          <p class="workshop-card-tag">Registration Open!</p>
           {%endif %}
-          <h2 class="card-header">{{workshop.workshopName}}</h2>
-          <p class="card-id">{{workshop.workshopId}}</p>
+          <h2 class="workshop-card-header">{{workshop.workshopName}}</h2>
+          <!-- <p class="card-id">{{workshop.workshopId}}</p> -->
           {%if workshop.registration_link%}
-          <a class="card-cta" href="{{workshop.registration_link}}"
-            >Register Now!</a
-          >
+          <!-- <a class="card-cta" href="{{workshop.registration_link}}"
+              >Register Now!</a
+            > -->
           {%endif %}
         </div>
-        <a class="card-btn">Read More</a>
+        <a class="workshop-card-btn">Read More</a>
       </div>
       {%endfor %}
     </div>
     <script>
-      const modal = document.querySelector('.modal')
-      const modalBg = document.querySelector('.modal-bg')
+      const modal = document.querySelector(".modal");
+      const modalBg = document.querySelector(".modal-bg");
 
-      const modalImg = document.querySelector('.modal-image')
-      const modalHeader = document.querySelector('.modal-header')
-      const modalTitle = document.querySelector('.modal-title')
-      const modalDesc = document.querySelector('.modal-desc')
-      const modalContact = document.querySelector('.modal-contact')
-      const modalDate = document.querySelector('.modal-date')
-      const modalVenue = document.querySelector('.modal-venue')
-      const modalLink = document.querySelector('.modal-btn')
+      const modalImg = document.querySelector(".modal-image");
+      const modalHeader = document.querySelector(".modal-header");
+      const modalTitle = document.querySelector(".modal-title");
+      const modalDesc = document.querySelector(".modal-desc");
+      const modalContact = document.querySelector(".modal-contact");
+      const modalDate = document.querySelector(".modal-date");
+      const modalVenue = document.querySelector(".modal-venue");
+      const modalLink = document.querySelector(".modal-btn");
 
-      const openBtns = document.querySelectorAll('.card-btn')
+      const openBtns = document.querySelectorAll(".workshop-card-btn");
       openBtns.forEach((btn) => {
-        btn.addEventListener('click', (e) => {
-          const details = e.target.parentNode
+        btn.addEventListener("click", (e) => {
+          const details = e.target.parentNode;
           try {
-            modalImg.src = details.attributes._img.nodeValue
-            modalHeader.textContent = details.attributes._name.nodeValue
-            modalTitle.textContent = details.attributes._id.nodeValue
-            modalDesc.textContent = details.attributes._desc.nodeValue
-            modalContact.textContent = details.attributes._contact.nodeValue
-            modalDate.textContent = details.attributes._date.nodeValue
-            modalVenue.textContent = details.attributes._venue.nodeValue
-            modalLink.href = details.attributes._link.nodeValue
+            modalImg.src = details.attributes._img.nodeValue;
+            modalHeader.textContent = details.attributes._name.nodeValue;
+            modalTitle.textContent = details.attributes._id.nodeValue;
+            modalDesc.textContent = details.attributes._desc.nodeValue;
+            modalContact.textContent = details.attributes._contact.nodeValue;
+            modalDate.textContent = details.attributes._date.nodeValue;
+            modalVenue.textContent = details.attributes._venue.nodeValue;
+            modalLink.href = details.attributes._link.nodeValue;
           } catch (err) {}
-          modalBg.classList.add('open-modal-bg')
-          modal.classList.add('open-modal')
-        })
-      })
-      modalBg.addEventListener('click', (e) => {
-        if (e.target.classList.contains('modal-bg')) {
-          modalBg.classList.remove('open-modal-bg')
-          modal.classList.remove('open-modal')
+          modalBg.classList.add("open-modal-bg");
+          modal.classList.add("open-modal");
+        });
+      });
+      modalBg.addEventListener("click", (e) => {
+        if (e.target.classList.contains("modal-bg")) {
+          modalBg.classList.remove("open-modal-bg");
+          modal.classList.remove("open-modal");
         }
-      })
-
+      });
     </script>
     {% include 'flow/navbarAndFooter/footer.html' %}
   </body>
